--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8282224970437825"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
